# ros_playground

./: README.md  memoria-pedro.md
docs/: 2021-01-20-12-45-15.bag
interaccion/: CMakeLists.txt  launch.sh  package.xml
interaccion/launch/: interaccion-base.launch  interaccion.launch  remoto_interaccion.launch
interaccion/msg/: inf_personal_usuario.msg  usuario.msg
interaccion/scripts/: test_mult.py
interaccion/src/: dialogo_nodo.py  emocion_usuario_nodo.py  empaquetador_nodo.py  informacion_personal_nodo.py  matematico_nodo.py  posicion_usuario_nodo.py  reloj_nodo.py
interaccion/srv/: multiplicador.srv
