<?xml version="1.0"?>
<package format="2">
  <name>interaccion</name>
  <version>0.0.0</version>
  <description>The interaccion package</description>

  <maintainer email="parias@todo.todo">Pedro Arias</maintainer>
  <maintainer email="franbesq@todo.todo">Francisco Blanco</maintainer>
  <maintainer email="ivnrg@todo.todo">Ivan Rodriguez</maintainer>

  <license>MIT</license>

  <!-- <url type="website">To be added soon</url> -->

  <author>Pedro Arias</author>
  <author>Francisco Blanco</author>
  <author>Ivan Rodriguez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_runtime</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
